[package]
name = "rustyweather"
authors = ["27rogi"]
description = "A simple weather forecast terminal script using OpenWeather API, made to study Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
dotenvy = "0.15.7"
ureq = { version = "2.9.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
